Add place holder text for setup

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Awesome Travels</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
   </head>
   <body>
-
+<h1>Hello</h1>
   </body>
 </html>
