Fix linter errors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light custom-nav">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav" aria-controls="navbarTogglerDemo02">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
       <span class="navbar-toggler-icon"></span>
     </button>
 
