Add mobile home page and its top, middle and bottom containers

--- a/index.html
+++ b/index.html
@@ -10,33 +10,229 @@
       <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css">
 
+      <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter&family=Lato:wght@100&display=swap" rel="stylesheet">
+
+       <!-- Font awesome icons -->
+       <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light custom-nav">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="mynav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Program</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Joint</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sponsor</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">News</a>
-        </li>
-      </ul>
+  <section class="top-section">
+    <nav class="navbar navbar-expand-lg navbar-light custom-nav">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+        <div class="collapse navbar-collapse" id="mynav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Program</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Joint</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sponsor</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">News</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <header class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                  <h3 class="header-text-a">Hello, Sharing the World</h3>
+                </div>
+             </div>
+             <div class="row">
+                 <div class="col">
+                   <h1 class="header-text-b">CREATIVE COMMONS GLOBAL TALENT 2015</h1>
+                 </div>
+              </div>
+              <div class="row header-tect-c-div">
+                  <div class="col">
+                    <p class="header-text-c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col">
+                    <h1 class="header-text-d">2015.10.15 THURSDAY</h1>
+                    <p class="header-text-e">@national meseum of kenya</p>
+                  </div>
+               </div>
+          </div>
+      </header>
+  </section>
+
+  <section class="middle-section">
+    <div class="container middle-section-container">
+        <div class="row">
+            <div class="col-md-6 middle-section-head">
+                <h2>Main Program</h2>
+                <hr>
+            </div>
+            <div class="col-md-6 top-program-1">
+              <div class="top-program">
+                <img src="./images/small.jpeg" alt="snall-image">
+                <p>ABCD</p>
+              </div>
+              <div class="top-program-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+              </div>
+            </div>
+            <div class="col-md-6 top-program-1">
+              <div class="top-program">
+                <img src="./images/small.jpeg" alt="snall-image">
+                <p>ABCD</p>
+              </div>
+              <div class="top-program-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+              </div>
+            </div>
+            <div class="col-md-6 top-program-1">
+              <div class="top-program">
+                <img src="./images/small.jpeg" alt="snall-image">
+                <p>ABCD</p>
+              </div>
+              <div class="top-program-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+              </div>
+            </div>
+            <div class="col-md-6 top-program-1">
+              <div class="top-program">
+                <img src="./images/small.jpeg" alt="snall-image">
+                <p>ABCD</p>
+              </div>
+              <div class="top-program-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+              </div>
+            </div>
+            <div class="col-md-6 top-program-1">
+              <div class="top-program">
+                <img src="./images/small.jpeg" alt="snall-image">
+                <p>ABCD</p>
+              </div>
+              <div class="top-program-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+              </div>
+            </div>
+        </div>
+        <div class="row" >
+              <!-- <button id="middle-section-btn" type="button" class="btn btn-primary">Blue</button> -->
+              <button id="middle-section-btn" type="button" class="btn">Join CC Global Summit 2015</button>
+        </div>
     </div>
-</nav>
+  </section>
+
+  <section class="bottom-section">
+      <div class="container bottom-section-container">
+        <input type="checkbox" id="readmore" />
+          <div class="row inner">
+              <div class="col-md-6 bottom-section-head">
+                  <h2>Featured Speakers</h2>
+                  <hr>
+              </div>
+              <div class="col-md-6 top-feature">
+                <div class="top-feature-1">
+                  <img src="./images/rich.jpg" alt="snall-image">
+                </div>
+                <div class="top-feature-2">
+                  <h4>Yochai Benkler</h4>
+                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+              </div>
+              <div class="col-md-6 top-feature">
+                <div class="top-feature-1">
+                  <img src="./images/rich.jpg" alt="snall-image">
+                </div>
+                <div class="top-feature-2">
+                  <h4>Yochai Benkler</h4>
+                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+              </div>
+              <div class="col-md-6 top-feature">
+                <div class="top-feature-1">
+                  <img src="./images/rich.jpg" alt="snall-image">
+                </div>
+                <div class="top-feature-2">
+                  <h4>Yochai Benkler</h4>
+                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+              </div>
+              <div class="col-md-6 top-feature">
+                <div class="top-feature-1">
+                  <img src="./images/rich.jpg" alt="snall-image">
+                </div>
+                <div class="top-feature-2">
+                  <h4>Yochai Benkler</h4>
+                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
+                  <hr>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+              </div>
+          </div>
+      </div>
+      <div class="show-more-wrap">
+        <label class="btn btn-light show-more" for="readmore"><i class="fas fa-chevron-down"></i></label>
+      </div>
+  </section>
+
+  <section class="patners">
+      <div class="row">
+        <div class="col-md-6 bottom-section-head">
+            <h2>Partners</h2>
+            <hr>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="row">
+            <div class="col foot">
+              <img class="footer-img" src="./images/google.jpeg" alt="">
+            </div>
+            <div class="col foot">
+              <img class="footer-img" src="./images/google.jpeg" alt="">
+            </div>
+            <div class="col foot">
+              <img class="footer-img" src="./images/google.jpeg" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col foota">
+              <img class="footer-img" src="./images/google.jpeg" alt="">
+            </div>
+            <div class="col footb">
+              <img class="footer-img" src="./images/google.jpeg" alt="">
+            </div>
+          </div>
+        </div>
+     </div>
+  </section>
+  <footer>
+    <div class="footer-img">
+       <img class="footer-img" src="./images/google.jpeg" alt="">
+    </div>
+    <div class="footer-text">
+        <p>2015 awesome travels Inc</p>
+    </div>
+  </footer>
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
