about mobile page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <header class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col upper-head">
                   <h3 class="header-text-a">Hello, Sharing the World</h3>
                 </div>
              </div>
