Add styling on the homepage and about pages

--- a/about.html
+++ b/about.html
@@ -20,8 +20,11 @@
 
   <section class="top-section">
     <nav class="navbar navbar-expand-lg navbar-light custom-nav">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
+      <button id="show" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
         <span class="navbar-toggler-icon"></span>
+      </button>
+      <button id="hide" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
+        <img src="./images/iconcancel.png" alt="">
       </button>
 
         <div class="collapse navbar-collapse" id="mynav">
@@ -83,7 +86,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
     </div>
 
     <div class="top-program-2">
-       <img src="./images/google.jpeg" alt="">
+       <img src="./images/organaizer.gif" alt="">
     </div>
   </section>
 
@@ -122,6 +125,37 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
         <div class="row">
           <div class="row">
             <div class="col foot">
+              <img class="footer-img" src="./images/partner/airbnb.png" alt="">
+            </div>
+            <div class="col foot">
+              <img class="footer-img" src="./images/partner/mozilla.png" alt="">
+            </div>
+            <div class="col foot">
+              <img class="footer-img" src="./images/partner/Google.png" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col foota">
+              <img class="footer-img" src="./images/partner/airbnb.png" alt="">
+            </div>
+            <div class="col footb">
+              <img class="footer-img" src="./images/partner/navar.png" alt="">
+            </div>
+          </div>
+        </div>
+     </div>
+  </section>
+  <!-- <section class="patners">
+      <div class="row">
+        <div class="col-md-6 bottom-section-head">
+            <h2>Partners</h2>
+            <hr>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="row">
+            <div class="col foot">
               <img class="footer-img" src="./images/google.jpeg" alt="">
             </div>
             <div class="col foot">
@@ -141,10 +175,10 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
           </div>
         </div>
      </div>
-  </section>
+  </section> -->
   <footer>
     <div class="footer-img">
-       <img class="footer-img" src="./images/google.jpeg" alt="">
+       <img class="footer-img" src="./images/logo.png" alt="logo">
     </div>
     <div class="footer-text">
         <p>2015 awesome travels Inc</p>
@@ -154,7 +188,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
-
+    <script src="./assets/js/functionality.js" charset="utf-8"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
