--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello, world!</title>
+    <title>Awesome Travels</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -20,9 +20,13 @@
 
   <section class="top-section">
     <nav class="navbar navbar-expand-lg navbar-light custom-nav">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
+      <button id="show" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <button id="hide" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
+        <img src="./images/iconcancel.png" alt="">
+      </button>
+
 
         <div class="collapse navbar-collapse" id="mynav">
           <ul class="navbar-nav">
@@ -82,7 +86,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             </div>
             <div class="col-md-6 top-program-1">
               <div class="top-program">
-                <img src="./images/small.jpeg" alt="snall-image">
+                <img src="./images/icons/exhibition.png" alt="exhibition-image">
                 <p>ABCD</p>
               </div>
               <div class="top-program-2">
@@ -91,7 +95,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             </div>
             <div class="col-md-6 top-program-1">
               <div class="top-program">
-                <img src="./images/small.jpeg" alt="snall-image">
+                <img src="./images/icons/forum.png" alt="forum-image">
                 <p>ABCD</p>
               </div>
               <div class="top-program-2">
@@ -100,7 +104,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             </div>
             <div class="col-md-6 top-program-1">
               <div class="top-program">
-                <img src="./images/small.jpeg" alt="snall-image">
+                <img src="./images/icons/ignite.png" alt="ignite-image">
                 <p>ABCD</p>
               </div>
               <div class="top-program-2">
@@ -109,7 +113,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             </div>
             <div class="col-md-6 top-program-1">
               <div class="top-program">
-                <img src="./images/small.jpeg" alt="snall-image">
+                <img src="./images/icons/lecture.png" alt="lecture-image">
                 <p>ABCD</p>
               </div>
               <div class="top-program-2">
@@ -118,7 +122,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             </div>
             <div class="col-md-6 top-program-1">
               <div class="top-program">
-                <img src="./images/small.jpeg" alt="snall-image">
+                <img src="./images/icons/workshop.png" alt="workshop-image">
                 <p>ABCD</p>
               </div>
               <div class="top-program-2">
@@ -203,21 +207,21 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
         <div class="row">
           <div class="row">
             <div class="col foot">
-              <img class="footer-img" src="./images/google.jpeg" alt="">
+              <img class="footer-img" src="./images/partner/airbnb.png" alt="">
             </div>
             <div class="col foot">
-              <img class="footer-img" src="./images/google.jpeg" alt="">
+              <img class="footer-img" src="./images/partner/mozilla.png" alt="">
             </div>
             <div class="col foot">
-              <img class="footer-img" src="./images/google.jpeg" alt="">
+              <img class="footer-img" src="./images/partner/Google.png" alt="">
             </div>
           </div>
           <div class="row">
             <div class="col foota">
-              <img class="footer-img" src="./images/google.jpeg" alt="">
+              <img class="footer-img" src="./images/partner/airbnb.png" alt="">
             </div>
             <div class="col footb">
-              <img class="footer-img" src="./images/google.jpeg" alt="">
+              <img class="footer-img" src="./images/partner/navar.png" alt="">
             </div>
           </div>
         </div>
@@ -225,7 +229,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
   </section>
   <footer>
     <div class="footer-img">
-       <img class="footer-img" src="./images/google.jpeg" alt="">
+       <img class="footer-img" src="./images/logo.png" alt="logo">
     </div>
     <div class="footer-text">
         <p>2015 awesome travels Inc</p>
@@ -236,6 +240,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
+   <script src="./assets/js/functionality.js" charset="utf-8"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
