fix linter errors

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
 
   <section class="bottom-section">
       <div class="container bottom-section-container">
-        <input type="checkbox" id="readmore" />
+        <input type="checkbox" id="readmore" class="read-more" />
           <div class="row inner">
               <div class="col-md-6 bottom-section-head">
                   <h2>Featured Speakers</h2>
