fix linter errors

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
           </div>
       </div>
       <div class="show-more-wrap">
-        <label class="btn btn-light show-more" for="readmore"><i class="fas fa-chevron-down"></i></label>
+        <label class="btn btn-light show-more" for="readmore">MORE<i class="fas fa-chevron-down"></i></label>
       </div>
   </section>
 
