desktop home page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
 
   <section class="middle-section">
     <div class="container middle-section-container">
-        <div class="row">
+        <div class="row inner-middle-section-container">
             <div class="col-md-12 col-lg-12 middle-section-head">
                 <h2>Main Program</h2>
                 <hr>
@@ -244,28 +244,27 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
       </div>
       <div class="container">
         <div class="row">
-          <div class="row">
-            <div class="col foot">
+          <div class="row footer-container">
+            <div class="col col-md-1 foot">
               <img class="footer-img" src="./images/partner/airbnb.png" alt="">
             </div>
-            <div class="col foot">
+            <div class="col col-md-2 foot">
               <img class="footer-img" src="./images/partner/mozilla.png" alt="">
             </div>
-            <div class="col foot">
+            <div class="col col-md-2 foot">
               <img class="footer-img" src="./images/partner/Google.png" alt="">
             </div>
-          </div>
-          <div class="row">
-            <div class="col foota">
+            <div class="col col-md-2 foota">
               <img class="footer-img" src="./images/partner/airbnb.png" alt="">
             </div>
-            <div class="col footb">
+            <div class="col col-md-2 footb">
               <img class="footer-img" src="./images/partner/navar.png" alt="">
             </div>
           </div>
         </div>
      </div>
   </section>
+
   <footer>
     <div class="footer-img">
        <img class="footer-img" src="./images/logo.png" alt="logo">
