--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       </section>
       <section class="desktop-custom-nav">
         <nav class="navbar navbar-expand-md navbar-light bg-light ml-auto">
-              <a class="navbar-brand custom-nav-brand" href="#">
-                <img src="./images/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-                Bootstrap
+              <a class="navbar-brand custom-nav-brand" href="./index.html">
+                <img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                AweSome Travels
               </a>
               <div class="collapse navbar-collapse inside-desktop-nav" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="./about.html">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Program</a>
@@ -53,7 +53,6 @@
                   <li class="nav-item special-list">
                     <a class="nav-link" href="#">CC Campaign</a>
                   </li>
-
                 </ul>
               </div>
           </nav>
@@ -68,8 +67,11 @@
       </button>
         <div class="collapse navbar-collapse" id="mynav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">About</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Program</a>
@@ -231,12 +233,12 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
           </div>
       </div>
       <div class="show-more-wrap">
-        <label class="btn btn-light show-more" for="readmore">MORE<i class="fas fa-chevron-down"></i></label>
+        <label id="showmore" class="btn btn-light show-more" for="readmore">MORE</label>
       </div>
   </section>
 
   <section class="patners">
-      <div class="row">
+      <div class="row outer-bottom-partner-head">
         <div class="col-md-6 bottom-partner-head">
             <h2>Partners</h2>
             <hr>
