fix linter errors

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
         <div class="row" >
               <!-- <button id="middle-section-btn" type="button" class="btn btn-primary">Blue</button> -->
               <button id="middle-section-btn" type="button" class="btn">Join CC Global Summit 2015</button>
-              <button id="desktop-middle-section-btn" type="button" class="btn"><a href="#">SEE THE WHOLE PROGRAM</a></button>
+              <a id="desktop-middle-section-btn" class="btn" href="#">SEE THE WHOLE PROGRAM</a>
         </div>
     </div>
   </section>
@@ -280,7 +280,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
-   <script src="./assets/js/functionality.js" charset="utf-8"></script>
+   <script src="./assets/js/functionality.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
