Implement dynamic JS for the features section

--- a/index.html
+++ b/index.html
@@ -186,7 +186,10 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
                   <h2>Featured Speakers</h2>
                   <hr>
               </div>
-              <div class="col-md-6 top-feature">
+              <div id="dyna-bottom-section">
+
+              </div>
+              <!-- <div class="col-md-6 top-feature">
                 <div class="top-feature-1">
                   <img src="./images/rich.jpg" alt="snall-image">
                 </div>
@@ -229,11 +232,11 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
                   <hr>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
                 </div>
-              </div>
+              </div> -->
           </div>
       </div>
       <div class="show-more-wrap">
-        <label id="showmore" class="btn btn-light show-more" for="readmore">MORE</label>
+        <label  id="showmore" class="btn btn-light show-more" for="readmore">MORE</label>
       </div>
   </section>
 
@@ -247,7 +250,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
       <div class="container">
         <div class="row">
           <div class="row footer-container">
-            <div class="col col-md-1 foot">
+            <div class="col col-md-2 foot">
               <img class="footer-img" src="./images/partner/airbnb.png" alt="">
             </div>
             <div class="col col-md-2 foot">
